updated i3 and i3 status configs

--- a/i3status.conf
+++ b/i3status.conf
@@ -7,16 +7,17 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
-#	output_format = "dzen2"
         colors = true
         interval = 1
 }
 
 
+order += "battery 0"
 order += "cpu_temperature 0"
 cpu_temperature 0 {
-format = " %degrees °C"
-path = "/sys/class/hwmon/hwmon0/temp1_input"
+format = "CPU--> %degrees °C"
+path = "/sys/class/thermal/thermal_zone0/temp"
+max_threshold= 60
 }
 
 #order += "frequency"
@@ -28,13 +29,18 @@ path = "/sys/class/hwmon/hwmon0/temp1_input"
 #
 
 
-
+#order += "fan_speed"
 order += "cpu_usage"
 order += "wireless _first_"
 order += "load"
 order += "memory"
 order += "tztime local"
-order += "disk /"
+
+
+#fan_speed{
+
+#	command="/home/satyam/.config/fan_speed.sh"
+#}
 
 
 cpu_usage {
@@ -51,12 +57,17 @@ ethernet _first_ {
         format_down = "E: down"
 }
 
-battery all {
+battery 0 {
         format = "%status %percentage %remaining"
+
+	last_full_capacity = true
+	hide_seconds = true
+	integer_battery_capacity = true
+	low_threshold= 30
 }
 
 disk "/" {
-        format = "%avail"
+	format= "Disk: %percentage_used(%used)"	
 }
 
 load {
@@ -64,11 +75,11 @@ load {
 }
 
 memory {
-        format = "%used "
-        # threshold_degraded = "1G"
-       # format_degraded = "MEMORY < %available"
+        format = "%used of %total "
+         threshold_degraded = "10G"
+        format_degraded = "MEMORY < %available"
 }
 
 tztime local {
-        format = "%H:%M:%S %d-%m-%Y"
+        format = "%H:%M:%S Date-> %d"
 }
