--- a/config
+++ b/config
@@ -13,11 +13,11 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-#font pango:Fira Code 11 
+#font pango:DejaVu 11
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:Dejavu Sans Mono 11
+font pango:DejaVu Sans Mono 12
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -25,14 +25,15 @@ font pango:Dejavu Sans Mono 11
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-exec feh --bg-fill /home/satyam/wallpapers/arch-linux.jpg
-exec xrandr --output HDMI-1 --mode 1360x768
+exec --no-startup-id feh --randomize --bg-fill ~/.local/share/wallpapers/
+exec --no-startup-id xrandr --dpi 144
 exec setxkbmap us colemak
-
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
-#exec --no-startup-id nm-applet
-#exec --no-startup-id blueman-manager
+exec --no-startup-id nm-applet
+exec --no-startup-id blueman-manager
+exec --no-startup-id pactl
+exec --no-startup-id dunst
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
@@ -40,25 +41,24 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
-bindsym Print exec scrot ~/
-bindsym $mod+p exec rofi -show p -modi p:rofi-power-menu
+bindsym Print exec scrot ~/Pictures/%Y-%m-%d-%T-screenshot.png 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+c kill
-title_align left
+title_align center
 default_border pixel 2
 hide_edge_borders smart
 
 #colours
 # class                 border  backgr. text    indicator child_border
-client.focused          #4c7899 #f82386 #0c00ff #2e9ef4   #285577
-client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
-client.unfocused        #333333 #f993c3 #888888 #292d2e   #222222
+client.focused          #4c7899 #0000ff #ffffff #2e9ef4   #285577
+client.focused_inactive #333333 #0000ff  #ffffff #484e50   #5f676a
+client.unfocused        #333333 #5f676a #888888 #292d2e   #222222
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
@@ -78,7 +78,7 @@ bindsym $mod+j focus left
 bindsym $mod+k focus down
 bindsym $mod+l focus up
 bindsym $mod+semicolon focus right
-bindsym $mod+z exec i3lock -c 000000
+bindsym $mod+z exec i3lock
 #bindsym $mod+v exec youtube_watch.sh
 
 # alternatively, you can use the cursor keys:
@@ -194,6 +194,23 @@ mode "resize" {
         bindsym $mod+r mode "default"
 }
 
+set $Locker i3lock && sleep 1
+
+set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
+mode "$mode_system" {
+    bindsym l exec --no-startup-id $Locker, mode "default"
+    bindsym e exec --no-startup-id i3-msg exit, mode "default"
+    bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
+    bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
+    bindsym r exec --no-startup-id systemctl reboot, mode "default"
+    bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"  
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+
+bindsym $mod+p mode "$mode_system"
 bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
@@ -202,16 +219,16 @@ bar {
 
   colors{
   background #000000
-  statusline #F9FA03
-  separator #f85AFF
-  focused_workspace  #4c7899 #800080 #ffffff
+  statusline #00A5FF
+  separator #f80000
+  focused_workspace  #ffffff #0000ff #ffffff
   active_workspace   #333333 #5f676a #ffffff
 
   }
 
 #  font pango:DejaVu Sans Mono, Icons 13
- mode hide 
+
+  mode hide
   modifier Mod1
  status_command i3status
 }
-
